@@ -98,11 +98,31 @@ Usage    : BAKE LIST/[BAKING CONTAINER]\n\r\
 Example  : bake list\n\r\
 Example  : bake list oven\n\r\
 Example  : bake oven\n\r\
-This skill allows the player to create a more nutricious meal from basic \
+This skill allows the player to create a more nutritious meal from basic \
 edible ingredients.  The player must be near a fire over which the meal \
 can be cooked.  The ingredients must be placed in a fire-safe container, \
 that is closeable, and is closed.  The container may be filled with water, \
 if water is required for the recipe.  \
+The ingredients for cooking are best obtained through the Butchering skill \
+and the Foraging skill.
+
+MBAKE=MASTER_BAKING
+MBAKING=MASTER_BAKING
+MASTERBAKE=MASTER_BAKING
+MASTERBAKING=MASTER_BAKING
+MASTER_BAKING=<ABILITY>\
+Usage    : MASTERBAKE LIST/[BAKING CONTAINER]\n\r\
+Example  : masterbake list\n\r\
+Example  : masterbake list oven\n\r\
+Example  : masterbake oven\n\r\
+This skill allows the player to create a more nutritious meal from basic \
+edible ingredients.  The player must be near a fire over which the meal \
+can be cooked.  The ingredients must be placed in a fire-safe container, \
+that is closeable, and is closed.  The container may be filled with water, \
+if water is required for the recipe.  Master Baking takes a bit longer \
+than regular Baking, but yields more food for the same ingredients, and \
+allows you to bake multiple things at the same time, so long as they are \
+in different containers. \
 The ingredients for cooking are best obtained through the Butchering skill \
 and the Foraging skill.
 
@@ -256,11 +276,31 @@ Usage    : COOK LIST/[COOKING CONTAINER]\n\r\
 Example  : cook list\n\r\
 Example  : cook list stew\n\r\
 Example  : cook pot\n\r\
-This skill allows the player to create a more nutricious meal from basic \
+This skill allows the player to create a more nutritious meal from basic \
 edible ingredients.  The player must be near a fire over which the meal \
 can be cooked.  The ingredients must be placed in a fire-safe container, \
 like a pot or pan.  A pot may be filled with water, if water is required \
 for the recipe.  \
+The ingredients for cooking are best obtained through the Butchering skill \
+and the Foraging skill, and some Food Prep may be necessary for some dishes.
+
+MCOOK=MASTER_COOKING
+MCOOKING=MASTER_COOKING
+MASTERCOOK=MASTER_COOKING
+MASTERCOOKING=MASTER_COOKING
+MASTER_COOKING=<ABILITY>\
+Usage    : MASTERCOOK LIST/[COOKING CONTAINER]\n\r\
+Example  : mastercook list\n\r\
+Example  : mastercook list stew\n\r\
+Example  : mastercook pot\n\r\
+This skill allows the player to create a more nutritious meal from basic \
+edible ingredients.  The player must be near a fire over which the meal \
+can be cooked.  The ingredients must be placed in a fire-safe container, \
+like a pot or pan.  A pot may be filled with water, if water is required \
+for the recipe.  Master cooking takes a bit longer than regular cooking, \
+but the yield per pound of ingredients is higher, and you are capable \
+of cooking multiple dishes at the same time (so long as they use different \
+containers). \
 The ingredients for cooking are best obtained through the Butchering skill \
 and the Foraging skill, and some Food Prep may be necessary for some dishes.
 
@@ -402,6 +442,23 @@ ingredients.  The player must be near a fire over which the alcohol \
 can be brewed.  The ingredients must be placed in a fire-safe container, \
 like a pot or pan.  A pot must be filled with water or other liquids required \
 by the recipe.  \
+The ingredients for cooking are best obtained through the Foraging skill.
+
+MDISTILL=MASTER_DISTILLING
+MASTERDISTILL=MASTER_DISTILLING
+MASTERDISTILLING=MASTER_DISTILLING
+MASTER_DISTILLING=<ABILITY>\
+Usage    : MASTERDISTILL LIST/[BREWING CONTAINER]\n\r\
+Example  : masterdistill pot\n\r\
+         : masterdistill list\n\r\
+         : masterdistill list whiskey\n\r\
+This skill allows the player to create a beer and other liquors from basic \
+ingredients.  The player must be near a fire over which the alcohol \
+can be brewed.  The ingredients must be placed in a fire-safe container, \
+like a pot or pan.  A pot must be filled with water or other liquids required \
+by the recipe.  Master Distilling requires a bit more time than normal \
+distilling, but yields more liquor for the same ingredients, and allows you \
+to prepare multiple liquors at the same time. \
 The ingredients for cooking are best obtained through the Foraging skill.
 
 DOMESTICATE=DOMESTICATING
@@ -572,9 +629,26 @@ Usage    : FOODPREP LIST/[CONTAINER]\n\r\
 Example  : foodprep bowl\n\r\
 Example  : foodprep list\n\r\
 Example  : foodprep list salad\n\r\
-This skill allows the player to create a more nutricious meal from basic \
+This skill allows the player to create a more nutritious meal from basic \
 edible ingredients.  The ingredients must be placed in a preparation container, \
 The container may be filled with water, if water is required for the recipe.  \
+The ingredients are best obtained through the Butchering skill \
+and the Foraging skill.
+
+MFOODPREP=MASTER_FOOD_PREP
+MFPREP=MASTER_FOOD_PREP
+MASTERFOODPREP=MASTER_FOOD_PREP
+MASTERFPREP=MASTER_FOOD_PREP
+MASTER_FOOD_PREP=<ABILITY>\
+Usage    : MASTERFOODPREP LIST/[CONTAINER]\n\r\
+Example  : masterfoodprep bowl\n\r\
+Example  : masterfoodprep list\n\r\
+Example  : masterfoodprep list salad\n\r\
+This skill allows the player to create a more nutritious meal from basic \
+edible ingredients.  The ingredients must be placed in a preparation container, \
+The container may be filled with water, if water is required for the recipe.  \
+Master Food Prep takes a bit longer than regular Food Prep, but yields more \
+food than normal, and permits you to prepare multiple things at the same time. \
 The ingredients are best obtained through the Butchering skill \
 and the Foraging skill.
 
